Amicar/src/objects/Marca_Local__c.object
<CustomObject>
    <fields>
        <fullName>Codigo_Marca__c</fullName>
        <label>Código Marca</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local</label>
        <referenceTo>Local__c</referenceTo>
        <relationshipLabel>Marcas Locales</relationshipLabel>
        <relationshipName>Marcas_Locales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca_Busqueda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca</label>
        <referenceTo>Marca__c</referenceTo>
        <relationshipLabel>Marcas Locales</relationshipLabel>
        <relationshipName>Marcas_Locales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca_Picklist__c</fullName>
        <label>Marca</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marcas</valueSetName>
        </valueSet>
    </fields>
    <label>Marca Local</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Marca</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marcas Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>